# s21

./: q
C2_s21_stringplus-1/src/: Makefile  main.c  s21_insert.c  s21_memchr.c  s21_memcmp.c  s21_memcpy.c  s21_memset.c  s21_sprintf.c  s21_sprintf.h  s21_strchr.c  s21_strcspn.c  s21_strerror.c  s21_string.c  s21_string.h  s21_strlen.c  s21_strncat.c  s21_strncmp.c  s21_strncpy.c  s21_strpbrk.c  s21_strrchr.c  s21_strstr.c  s21_strtok.c  s21_to_lower.c  s21_to_upper.c  s21_trim.c  suite_s21_insert.c  suite_s21_memchr.c  suite_s21_memcmp.c  suite_s21_memcpy.c  suite_s21_memset.c  suite_s21_sprintf_c.c  suite_s21_sprintf_d.c  suite_s21_sprintf_e.c  suite_s21_sprintf_f.c  suite_s21_sprintf_g.c  suite_s21_sprintf_hex1.c  suite_s21_sprintf_hex2.c  suite_s21_sprintf_i.c  suite_s21_sprintf_n.c  suite_s21_sprintf_oct.c  (+19 more)
C5_s21_decimal-2/src/: Makefile  s21_decimal_tools.c  s21_from_decimal_to_int.c
C6_s21_matrix-1/src/: Makefile  s21_calc_complements.c  s21_create_matrix.c  s21_determinant.c  s21_eq_matrix.c  s21_inverse_matrix.c  s21_matrix.h  s21_mult_matrix.c  s21_mult_number.c  s21_remove_matrix.c  s21_sub_matrix.c  s21_sum_matrix.c  s21_support_functions.c  s21_transpose.c
C7_BrickGame_v1.0-1/src/: Doxyfile  Makefile  tetris.c
CPP1_s21_matrixplus-2/src/: Makefile  S21_matrix_oop.cpp  s21_matrix_oop.h
CPP2_s21_containers-1/src/: Makefile  s21_array.h  s21_containers.h  s21_containersplus.h  s21_list.h  s21_map.h  s21_multiset.h  s21_queue.h  s21_set.h  s21_stack.h  (+2 more)
CPP3_BrickGame_v2.0-1/src/cmake_tetris_desktop/: CMakeLists.txt
DO6_CICD-1/: .gitlab-ci.yml
(+177 files in other folders)
